# glove-tools

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  DashboardBuildInitialCache.cmake.in  Doxyfile  README.mkd  TODOS.txt  calib-left-5dt.txt  calib-right-5dt.txt  glove-tools-config-build-tree.cmake.in  glove-tools-config.cmake.in  glovetools-config-build-tree.cmake.in  glovetools-config.cmake.in  hand-structured.osg  hand-structured.xxd  vpstools-config-build-tree.cmake.in
5DTGlove/: CMakeLists.txt  GloveNode.h
applications/: CMakeLists.txt  dummyHand.cpp  logger.cpp
cmake/: FindGlove5DT.cmake
glove-tools/: AvailableHardware.h.in  CMakeLists.txt  Calibration.cpp  Calibration.h  FakeFlexingGloveHardware.cpp  FakeFlexingGloveHardware.h  Finger.h  Glove.cpp  Glove.h  GloveHardware5DT.cpp  GloveHardware5DT.h  GloveHardwareFactory.cpp  GloveHardwareFactory.h  GloveNode.cpp  GloveNode.h  GlovePointerTypes.h  GloveToolsConfig.h.in  GloveUpdater.cpp  GloveUpdater.h  Glove_KalmanFilter.cpp  Handedness.h  IGloveHardware.cpp  IGloveHardware.h  MockGloveHardware.cpp  MockGloveHardware.h
glove-tools/FakeFlexingGloveHardware/: FakeFlexingGloveHardware.h
glove-tools/GloveHardware5DT/: GloveHardware5DT.cpp  GloveHardware5DT.h
glove-tools/GloveHardwareVRPN/: GloveHardwareVRPN.cpp  GloveHardwareVRPN.h
glove-tools/old/: GloveUpdater.cpp  GloveUpdater.h
